[project]
name = "elenkhos-serve"
version = "0.1.0"
description = "A scalable Python inference engine for Qwen models"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/elenkhos_serve"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
